This code was modified from "Codemy.com" on Youtube

--- a/Stocks_NeuralNetwork.ipynb
+++ b/Stocks_NeuralNetwork.ipynb
@@ -110,7 +110,7 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "my_df = pd.read_csv(\"/content/drive/MyDrive/SF/Datasets for Train n' Test/infolimpioavanzadoTarget.csv\")"
+        "my_df = pd.read_csv(\"/content/drive/MyDrive/Stocks_Data_File_Here.csv\")"
       ],
       "metadata": {
         "id": "3WzV4PfT2xhF",
