This code was modified from "Codemy.com" on Youtube

--- a/Weather_NeuralNetwork.ipynb
+++ b/Weather_NeuralNetwork.ipynb
@@ -121,7 +121,7 @@
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
-        "my_df = pd.read_csv(\"/content/drive/MyDrive/SF/Datasets for Train n' Test/weather_prediction_dataset.csv\")"
+        "my_df = pd.read_csv(\"/content/drive/MyDrive/Weather_Data_File_Path.csv\")"
       ]
     },
     {
